trunk/test/T2/Fail/T2_classExtendsLowerCase.ic
class Good extends class bad{}
 